[package]
name = "curses_snake"
version = "0.1.0"
authors = ["Rasmus <rasmus.kallqvist@gmail.com>"]
edition = "2018"

[dependencies]
pancurses = { git = "https://github.com/warwolt/pancurses" }
glam = "0.14.0" # for 2d vectors
strum = "0.21.0" # for iterating over enum alues
strum_macros = "0.21.0" # for iterating over enum alues
platform = { path = "./platform" }
rand = "0.8.4" # random number generation

